# FastRenderEngine

./: .gitignore  Attribution.txt  CMakeLists.txt  DIRECTORIES.MD  LICENSE  README.md  Radme.md  TODO.txt  buildDebugWin32.bat  buildReleaseWin32.bat  cleanBuildDebugWin32.bat  genWin32.bat  install.bat
Data/: imgui.ini
Data/Models/: honeycomb.gltf  scene.gltf  sea.mtl
Data/Models/coordSystem/: scene.mtl
Data/Models/cubePBR/: scene.gltf
Data/Models/face/: scene.gltf
Data/Models/knightHelmPBR/: scene.gltf
Data/Models/sciFiShip/: scene.gltf
Data/Shaders/: colored.frag  colored.frag.spv  colored.vert  colored.vert.spv  compile_shaders.bat  fog.frag  fog.frag.spv  normalMap.frag  normalMap.frag.spv  normalMap.vert  normalMap.vert.spv  pbr.frag  pbr.frag.spv  pbr.vert.spv  second.frag  second_frag.spv  shader.frag  textured.frag  textured.frag.spv  textured.vert  textured.vert.spv
Samples/App/: CMakeLists.txt
Samples/App/App/: CMakeLists.txt  main.cpp  resources.rc
Samples/App/App/Data/Models/fish/: scene.gltf
Samples/App/App/Data/Models/unitCube/: unitCube.mtl
Samples/App/App/Data/Models/unitQuad/: unitQuad.mtl
Samples/App/App/Data/Shaders/: colored.frag  colored.vert  compile_shaders.bat  fog.frag  fog.vert  grayscale.frag  grayscale.vert  normalMap.frag  normalMap.vert  pbr.frag  postProcess.frag  renderStorageImage.frag  renderStorageImage.vert  rt.rchit  rt.rgen  textured.frag  textured.vert
Samples/App/AppLib/: AppData.cpp  AppEngine.cpp  CMakeLists.txt  Options.cpp
Samples/App/AppLib/Includes/: AppData.hpp  AppEngine.hpp  AppPointers.hpp  Options.hpp  Pointers.hpp  resource.h
Samples/App/AppLib/Includes/Renderer/: AppRenderer.hpp
Samples/App/AppLib/Renderer/: AppRenderer.cpp
Screenshots/: Credits.txt
Src/: Log.cpp  MathUtilities.cpp
Src/FileSystem/: FileSystemWindows.cpp
Src/Include/: Camera.hpp  Engine.hpp  Image.hpp  Light.hpp  Log.hpp  Material.hpp  MathUtilities.hpp  Mesh.hpp  MeshModel.hpp  Mutexes.hpp  Pointers.hpp  Shader.hpp  Stat.hpp  Statistics.hpp  ThreadPool.hpp  Timer.hpp  Utilities.hpp
Src/Include/FileSystem/: FileSystem.hpp
Src/Include/Macros/: Class.hpp  Member.hpp
Src/Include/Renderer/: Callbacks.hpp  FeatureMacro.hpp  FeatureStorage.hpp  ShaderInputParser.hpp  VulkanAccelerationStructure.hpp  VulkanAttachment.hpp  VulkanBufferManager.hpp  VulkanCommandBuffer.hpp  VulkanDescriptor.hpp  VulkanDescriptorPool.hpp  VulkanDescriptorSet.hpp  VulkanDescriptorSetLayout.hpp  VulkanFrameBuffer.hpp  VulkanImage.hpp  VulkanPipeline.hpp  VulkanQueueFamily.hpp  VulkanRenderPass.hpp  VulkanRenderer.hpp  VulkanResourceCache.hpp  VulkanSampler.hpp  VulkanSamplerKeyHasher.hpp  VulkanShader.hpp  VulkanSwapchain.hpp  VulkanTexture.hpp  VulkanTextureManager.hpp
Src/Include/Serialization/: BaseTypesSerialization.hpp  MathSerialization.hpp
Src/Renderer/: ShaderInputParser.cpp  VulkanDescriptor.cpp  VulkanSampler.cpp
Tools/: NSight Systems report parser.py
include/: Camera.hpp  Engine.hpp  Image.hpp  Light.hpp  Material.hpp  Mesh.hpp  MeshModel.hpp  Mutexes.hpp  Shader.hpp  Statistics.hpp  ThreadPool.hpp  Timer.hpp  Utilities.hpp
include/Hash/: Hash.hpp
include/Macros/: Member.hpp
include/Renderer/: Camera.hpp  VulkanAttachment.hpp  VulkanBufferManager.hpp  VulkanCommandBuffer.hpp  VulkanCommandBuffers.hpp  VulkanDescriptorPool.hpp  VulkanDescriptorSet.hpp  VulkanDescriptorSetLayout.hpp  VulkanFrameBuffer.hpp  VulkanImage.hpp  VulkanPipeline.hpp  VulkanQueueFamily.hpp  VulkanRenderPass.hpp  VulkanRenderer.hpp  VulkanShader.hpp  VulkanSwapchain.hpp  VulkanTextureManager.hpp
samples/: CMakeLists.txt
samples/Basic/: CMakeLists.txt  main.cpp
samples/NormalMap/: CMakeLists.txt  main.cpp
samples/PBR/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Camera.cpp  Engine.cpp  Image.cpp  Material.cpp  Mesh.cpp  MeshModel.cpp  Statistics.cpp  Utilities.cpp
src/Renderer/: Camera.cpp  VulkanAttachment.cpp  VulkanBufferManager.cpp  VulkanCommandBuffer.cpp  VulkanCommandBuffers.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorSet.cpp  VulkanDescriptorSetLayout.cpp  VulkanFrameBuffer.cpp  VulkanImage.cpp  VulkanPipeline.cpp  VulkanQueueFamily.cpp  VulkanRenderPass.cpp  VulkanRenderer.cpp  VulkanShader.cpp  VulkanSwapchain.cpp  VulkanTextureManager.cpp
